--- a/pom.xml
+++ b/pom.xml
@@ -180,7 +180,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId><artifactId>maven-javadoc-plugin</artifactId>
 						<configuration>
-							<offlineLinks>
+							<offlineLinks combine.children="append">
 								<!-- Direct -->
 								<offlineLink>
 									<url>https://oss.aoapps.com/lang/apidocs/</url>
@@ -195,7 +195,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 									<location>${project.build.directory}/offlineLinks/com.aoapps/ao-servlet-filter</location>
 								</offlineLink>
 								<!-- JSP Only: <groupId>com.aoapps</groupId><artifactId>ao-taglib</artifactId> -->
-								<!-- Java EE: <groupId>javax.servlet</groupId><artifactId>javax.servlet-api</artifactId> -->
+								<!-- ao-javadoc-offline: <groupId>javax.servlet</groupId><artifactId>javax.servlet-api</artifactId> -->
 								<offlineLink>
 									<url>https://semanticcms.com/autogit/model/apidocs/</url>
 									<location>${project.build.directory}/offlineLinks/com.semanticcms/semanticcms-autogit-model</location>
@@ -210,16 +210,6 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 								</offlineLink>
 								<!-- JSP Only: <groupId>com.semanticcms</groupId><artifactId>semanticcms-core-taglib</artifactId> -->
 								<!-- JSP Only: <groupId>org.apache.taglibs</groupId><artifactId>taglibs-standard-spec</artifactId> -->
-								<!-- Java SE -->
-								<offlineLink>
-									<url>${javadoc.link.javase}</url>
-									<location>${project.build.directory}/offlineLinks/com/aoapps/javadoc/offline/javase/${javase.release}</location>
-								</offlineLink>
-								<!-- Java EE -->
-								<offlineLink>
-									<url>${javadoc.link.javaee}</url>
-									<location>${project.build.directory}/offlineLinks/com/aoapps/javadoc/offline/javaee/${javaee.version}</location>
-								</offlineLink>
 							</offlineLinks>
 						</configuration>
 					</plugin>
