--- a/book/pom.xml
+++ b/book/pom.xml
@@ -83,9 +83,15 @@ along with semanticcms-autogit-taglib.  If not, see <https://www.gnu.org/license
 	</issueManagement>
 
 	<ciManagement>
+		<system>Jenkins</system>
+		<url>https://jenkins.aoindustries.com/job/ao/job/semanticcms-1.x/job/autogit/job/taglib-book/</url>
+	</ciManagement>
+	<!-- Only one allowed in POM:
+	<ciManagement>
 		<system>GitHub Actions</system>
 		<url>https://github.com/ao-apps/semanticcms-autogit-taglib/actions</url>
 	</ciManagement>
+	-->
 
 	<repositories>
 		<!-- Repository required here, too, so can find parent -->
