--- a/pom.xml
+++ b/pom.xml
@@ -141,7 +141,7 @@ along with semanticcms-autogit-taglib.  If not, see <https://www.gnu.org/license
 						<groupId>org.apache.maven.plugins</groupId><artifactId>maven-dependency-plugin</artifactId>
 						<executions>
 							<execution>
-								<id>unpack.offlineLinks</id><phase>generate-sources</phase><goals><goal>unpack</goal></goals>
+								<id>unpack.offlineLinks</id><phase>prepare-package</phase><goals><goal>unpack</goal></goals>
 								<configuration>
 									<artifactItems>
 										<!-- Direct -->
