--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,13 @@ along with semanticcms-autogit-taglib.  If not, see <https://www.gnu.org/license
 					</usedDependencies>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId><artifactId>maven-checkstyle-plugin</artifactId>
+				<configuration>
+					<!-- TODO: Clean-up Checkstyle -->
+					<failOnViolation>false</failOnViolation>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
