--- a/book/pom.xml
+++ b/book/pom.xml
@@ -36,6 +36,7 @@ along with semanticcms-autogit-taglib.  If not, see <https://www.gnu.org/license
     <!-- Must be set to ${git.commit.time} for snapshots or ISO 8601 timestamp for releases. -->
     <project.build.outputTimestamp>${git.commit.time}</project.build.outputTimestamp>
     <module.name>com.semanticcms.autogit.taglib.book</module.name>
+    <subproject.subpath>devel/</subproject.subpath>
     <!-- These values are copied from the project being documented -->
     <documented.artifactId>semanticcms-autogit-taglib</documented.artifactId>
     <documented.name>SemanticCMS AutoGit Taglib</documented.name>
