--- a/book/pom.xml
+++ b/book/pom.xml
@@ -41,6 +41,10 @@ along with semanticcms-autogit-taglib.  If not, see <https://www.gnu.org/license
     <documented.artifactId>semanticcms-autogit-taglib</documented.artifactId>
     <documented.name>SemanticCMS AutoGit Taglib</documented.name>
     <documented.description>SemanticCMS automatic Git in a JSP environment.</documented.description>
+    <javadoc.breadcrumbs><![CDATA[<a target="${javadoc.target}" href="https://semanticcms.com/">SemanticCMS</a>
+/ <a target="${javadoc.target}" href="https://semanticcms.com/autogit/">AutoGit</a>
+/ <a target="${javadoc.target}" href="${project.url}">Taglib</a>]]></javadoc.breadcrumbs>
+    <javadoc.taglibReference><![CDATA[<li><a target="${javadoc.target}" href="${project.url}semanticcms-autogit.tld/">Taglib Reference</a></li>]]></javadoc.taglibReference>
 
     <description.html><![CDATA[Documentation for <a target="${javadoc.target}" href="${project.url}">${documented.name}</a> in <a target="${javadoc.target}" href="https://semanticcms.com/">SemanticCMS</a> format.]]></description.html>
     <!-- SonarQube -->
