--- a/book/pom.xml
+++ b/book/pom.xml
@@ -29,7 +29,7 @@ along with semanticcms-autogit-taglib.  If not, see <https://www.gnu.org/license
     <relativePath>../../../parent/pom.xml</relativePath>
   </parent>
 
-  <groupId>com.semanticcms</groupId><artifactId>semanticcms-autogit-taglib-book</artifactId><version>1.6.0-POST-SNAPSHOT</version>
+  <groupId>com.semanticcms</groupId><artifactId>semanticcms-autogit-taglib-book</artifactId><version>1.7.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <properties>
@@ -145,7 +145,7 @@ along with semanticcms-autogit-taglib.  If not, see <https://www.gnu.org/license
             <configuration>
               <artifactItems>
                 <artifactItem>
-                  <groupId>com.semanticcms</groupId><artifactId>semanticcms-autogit-taglib</artifactId><version>1.6.0${POST-SNAPSHOT}</version>
+                  <groupId>com.semanticcms</groupId><artifactId>semanticcms-autogit-taglib</artifactId><version>1.7.0-SNAPSHOT<!-- ${POST-SNAPSHOT} --></version>
                   <type>jar</type>
                   <includes>META-INF/semanticcms-autogit.tld</includes>
                 </artifactItem>
@@ -155,7 +155,7 @@ along with semanticcms-autogit-taglib.  If not, see <https://www.gnu.org/license
         </executions>
         <dependencies>
           <dependency>
-            <groupId>com.semanticcms</groupId><artifactId>semanticcms-autogit-taglib</artifactId><version>1.6.0${POST-SNAPSHOT}</version>
+            <groupId>com.semanticcms</groupId><artifactId>semanticcms-autogit-taglib</artifactId><version>1.7.0-SNAPSHOT<!-- ${POST-SNAPSHOT} --></version>
             <type>jar</type>
             <exclusions><exclusion><groupId>*</groupId><artifactId>*</artifactId></exclusion></exclusions>
           </dependency>
